# mot3d

./: LICENSE  README  README.md  __init__.py  features.py  mot3d.py  requirements.txt  tuning.py  types.py  utils.py
FollowMe/: dSSP  main.cpp
SSP/: SSP
examples/simple/: example.py  track_line1.json
examples/simple_2d/: example.py  track_line2.json
examples/simple_2d_tracklets/: example.py
examples/soldiers/: detections_3d_head_test_25fps_0.05_49500_50000.json  example.py
examples/soldiers_3d/: camera_pose.json  detections_3d_head.json  example.py
ilp/: ilp.py
mot3d/: __init__.py  distance_functions.py  mot3d.py  types.py  weight_functions.py
mot3d/solvers/ilp/: ilp.py
mot3d/solvers/wrappers/muSSP/: CMakeLists.txt  build.sh  cmake_and_build.sh  test.py  wrapper.cpp
mot3d/utils/: filt.py  matching.py  singleview_geometry.py  trajectory.py  utils.py  vis.py
muSSP/: main.cpp  muSSP
projects/PETS2009S2L1/: calibration.json  feeders.py  multiview_tracking.py  multiview_tracking_2d3d.py  run_multiview.sh  run_multiview_2d3d.sh  run_singleview.sh  scene.py  singleview_tracking.py  tracking_routines.py  visualise.py  visualise_2d3d.py
projects/PETS2009S2L1/config/: config_2d3d_PETS2009S2L1.yaml  config_multiview_PETS2009S2L1.yaml  config_singleview_PETS2009S2L1_View_001.yaml  config_singleview_PETS2009S2L1_View_003.yaml  config_singleview_PETS2009S2L1_View_004.yaml  config_singleview_PETS2009S2L1_View_005.yaml  config_singleview_PETS2009S2L1_View_006.yaml  config_singleview_PETS2009S2L1_View_007.yaml  config_singleview_PETS2009S2L1_View_008.yaml
projects/PETS2009S2L1/debugging/: Debugging - compute trajectories - multiview.ipynb  Debugging - compute trajectories - singleview.ipynb
projects/PETS2009S2L1/detections/: keypointsrcnn_resnet50_fpn_View_001_finetuned_2.json  keypointsrcnn_resnet50_fpn_View_003_finetuned_2.json  keypointsrcnn_resnet50_fpn_View_004_finetuned_2.json  keypointsrcnn_resnet50_fpn_View_005_finetuned_2.json  keypointsrcnn_resnet50_fpn_View_006_finetuned_2.json  keypointsrcnn_resnet50_fpn_View_007_finetuned_2.json  (+1 more)
projects/multiview_PETS2009S2L1/: calibration.json  multiview_tracking.py  overlapping_fov_topview.py  scene.py  tracking_routines.py  visualise.py
projects/singleview_PETS2009S2L1/: feeders.py  singleview_tracking.py  tracking_routines.py  visualise.py
solvers/SSP/: main.cpp
solvers/muSSP/: Graph.cpp  main.cpp
solvers/wrappers/muSSP/: CMakeLists.txt  (+3 more)
(+15 files in other folders)
